<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditEvent" >

    <TextView
        android:id="@+id/tvEditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title" />

    <EditText
        android:id="@+id/etEditGetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEditTitle"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/title" />

    <TextView
        android:id="@+id/tvEditNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEditGetTitle"
        android:layout_marginTop="5dp"
        android:text="@string/note" />

    <EditText
        android:id="@+id/etEditGetNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEditNote"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/tvEditDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEditGetNote"
        android:layout_marginTop="5dp"
        android:text="@string/date" />

    <EditText
        android:id="@+id/etEditGetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEditDate"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/tvEditTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEditGetDate"
        android:layout_marginTop="5dp"
        android:text="@string/time" />

    <EditText
        android:id="@+id/etEditGetTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEditTime"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="time" />

    <Button
        android:id="@+id/bEditDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="43dp"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/bEditSave"
        android:text="@string/delete" />

    <Button
        android:id="@+id/bEditSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bEditDelete"
        android:layout_alignBottom="@+id/bEditDelete"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/tvEditTime"
        android:text="@string/save" />

</RelativeLayout>